--- a/src/app/misc/data-table/data-table.component.html
+++ b/src/app/misc/data-table/data-table.component.html
@@ -8,6 +8,7 @@
 				[defaultColDef]="defaultColDef"
 				[rowData]="rowData"
 				[rowHeight]="rowHeight"
+				[headerHeight]="headerHeight"
 			></ag-grid-angular>
 		</div>
 	<!--<div style="background-color:#ccc; padding: 2rem">right side column</div>-->
