--- a/src/app/misc/data-table/data-table.component.html
+++ b/src/app/misc/data-table/data-table.component.html
@@ -7,6 +7,8 @@
 				[gridOptions]="gridOptions"
 				[defaultColDef]="defaultColDef"
 				[rowData]="rowData"
+				[overlayLoadingTemplate]="overlayLoadingTemplate"
+				[overlayNoRowsTemplate]="overlayNoRowsTemplate"
 			></ag-grid-angular>
 		</div>
 	<!--<div style="background-color:#ccc; padding: 2rem">right side column</div>-->
