--- a/src/app/stock/stock.component.html
+++ b/src/app/stock/stock.component.html
@@ -5,29 +5,11 @@
 		[style.width]="tableContainerStyle.width" 
 	>
 		<div class="container-fluid px-1">
-			<!--
-			<div class="d-flex">
-				<button 
-					class="float-start btn btn-outline-secondary btn-sm" 
-					(click)="_offCanvas.open(mainOffcanvasContent)" 
-					type="button">=</button>
-				<button 
-					[ngClass]="activeView===a?{'active':true}:null"
-					*ngFor="let a of viewArr"
-					class="float-start btn btn-outline-secondary btn-sm ms-2" 
-					(click)="changeView(a)"
-					type="button"
-				>
-					{{a.toUpperCase()}}
-				</button>
-			</div>
-			-->
 			<div class="d-flex">
 				<button 
 					class="float-start btn btn-outline-secondary btn-sm" 
 					(click)="_offCanvas.open(mainOffcanvasContent)" type="button"
 				>=</button>
-				
 				<div ngbDropdown class="float-start ms-1">
 					<button ngbDropdownToggle class="btn btn-secondary btn-sm dropdown-toggle" type="button">
 						{{activeView.toUpperCase()}}
@@ -42,8 +24,7 @@
 							{{a.toUpperCase()}}
 						</button>
 					</div>
-				</div>
-				
+				</div>		
 				<!-- OPERATION MODE -->
 				<div ngbDropdown class="float-start ms-1"> 
 					<button ngbDropdownToggle class="btn  btn-secondary btn-sm dropdown-toggle" type="button">
@@ -59,8 +40,7 @@
 							{{operationPointer.toUpperCase()}}
 						</button>
 					</div>
-				</div>
-				
+				</div>				
 				<button
 					class="btn-sm"
 					*ngIf="gridOptions.api?.getSelectedRows().length>0 && operation.active==='delete'"
@@ -69,8 +49,7 @@
 					delete
 				</button>
 				
-			</div>
-			
+			</div>			
 			<div class="d-flex">
 				<input 
 					class="form-control me-1" 
@@ -88,27 +67,25 @@
 				</button>
 
 			</div>
-	</div>
+		</div>
 	</nav>
 	<div id="gridTable"
 		[style.width]="tableContainerStyle.width" 
 		[style.height]="tableContainerStyle.height"
 	>	
 		<ng-container *ngIf="stock.raw;then dataTable; else emptyDataElement"></ng-container>
-	</div>	
-	
-		<ng-template #dataTable>
-			<app-data-table 
-				[gridOptions]="gridOptions"
-				[rowData]="stock.stock[activeView].data"
-				[defaultColDef]="defaultColDef"
-				[overlayNoRowsTemplate]="'<div>kosong..</div>'"
-			></app-data-table>
-		</ng-template>
-		<ng-template #emptyDataElement>
-			<p>kosong..</p>
-		</ng-template>
-
+	</div>		
+	<ng-template #dataTable>
+		<app-data-table 
+			[gridOptions]="gridOptions"
+			[rowData]="stock.stock[activeView].data"
+			[defaultColDef]="defaultColDef"
+			[overlayNoRowsTemplate]="'<div>kosong..</div>'"
+		></app-data-table>
+	</ng-template>
+	<ng-template #emptyDataElement>
+		<p>kosong..</p>
+	</ng-template>
 </div>
 
 <ng-template #mainOffcanvasContent>
@@ -130,6 +107,8 @@
 			<button type="button" class="btn btn-outline-secondary btn-sm" (click)="_excel.downloadExcel(currentPage)">Download</button>
 			<button type="button" class="btn btn-outline-secondary btn-sm" (click)="get(currentPage)">Refresh</button>
 			<button type="button" class="btn btn-outline-secondary btn-sm" (click)="delete(getAllAgGridRows())">Delete All</button>
+			<button type="button" class="btn btn-outline-secondary btn-sm" (click)="modal.modal_3.openModal()">Tambah Data</button>
+			<button type="button" class="btn btn-outline-secondary btn-sm" (click)="console.log('debugThis : ',debugThis)"><-></button>
 		</div>
 	</div>
 </ng-template>
@@ -564,4 +543,122 @@
 		onclick="(()=>document.getElementById('submitButtonId').click())()"
 	>Submit</button>
 	<button type="button" class="btn btn-outline-dark" (click)="modal.modal_2.closeModal()">Close</button>
+</ng-template>
+
+<ng-template #modal_3 let-modal3>
+	<app-dynamic-modal 
+		[modalBody]="modalBody3"
+		[modalFooter]="modalFooter3"
+		[modal]="modal3"
+		[modalTitle]="'Tambah'"
+	></app-dynamic-modal>
+</ng-template>
+<ng-template #modalBody3>
+	<div class="container-fluid">
+		<div class="row mb-1">
+			<label for="l_10" class="col-sm-3 col-form-label col-form-label-sm">
+				Nama Barang
+			</label>
+			<div class="col-9">
+				<input
+					onclick="this.select()" 
+					type="text"
+					id="l_10"
+					class="form-control form-control-sm"
+				>
+			</div>
+		</div>
+		<div class="row mb-1">
+			<label for="l_11" class="col-sm-3 col-form-label col-form-label-sm">
+				Supplier
+			</label>
+			<div class="col-7">
+				<div class="input-group ">
+					<input
+						onclick="this.select()" 
+						type="text"
+						id="l_11"
+						class="form-control form-control-sm"
+						list="datalistOptions"
+					>
+					<div ngbDropdown>
+						<button ngbDropdownToggle class="btn btn-outline-secondary dropdown-toggle" type="button"></button>
+						<div ngbDropdownMenu class="dropdown-menu">
+							<button 
+								ngbDropdownItem
+								*ngFor="let a of modal.modal_3.getDatalist('supplier')"
+								(click)="console.log(a)"
+								type="button"
+							>
+								<a>{{a}}</a>
+							</button>
+						</div>
+					</div>		
+					<datalist id="datalistOptions">
+						<option 
+							*ngFor="let a of modal.modal_3.getDatalist('supplier')"
+							value={{a}}
+						>
+					</datalist>
+				</div>
+			</div>
+		</div>
+		<div class="row mb-1">
+			<label for="l_12" class="col-sm-3 col-form-label col-form-label-sm">
+				Qty/ Ctn
+			</label>
+			<div class="col-4">
+				<input
+					onclick="this.select()" 
+					type="text"
+					id="l_12"
+					class="form-control form-control-sm"
+				>
+			</div>
+		</div>
+		<div class="row mb-1">
+			<label for="l_13" class="col-sm-3 col-form-label col-form-label-sm">
+				Satuan
+			</label>
+			<div class="col-4">
+				<input
+					onclick="this.select()" 
+					type="text"
+					id="l_13"
+					class="form-control form-control-sm"
+				>
+			</div>
+		</div>
+		<div class="row mb-1">
+			<label for="l_14" class="col-sm-3 col-form-label col-form-label-sm">
+				Kategori
+			</label>
+			<div class="col-4">
+				<select class="form-select" aria-label="Default select example">
+					<option selected>-</option>
+					<option>NON-PAJAK</option>
+					<option>PAJAK</option>
+				</select>
+			</div>
+		</div>
+		<div class="row mb-1">
+			<label for="l_15" class="col-sm-3 col-form-label col-form-label-sm">
+				Ctn
+			</label>
+			<div class="col-4">
+				<input
+					onclick="this.select()" 
+					type="text"
+					id="l_15"
+					class="form-control form-control-sm"
+				>
+			</div>
+		</div>
+	</div>
+	
+</ng-template>
+<ng-template #modalFooter3>
+	<button type="button" class="btn btn-outline-dark" (click)="console.log(modal.modal_3.getDatalist('supplier'))">1</button>
+	<button type="button" class="btn btn-outline-dark" (click)="modal.modal_3.openModal()">Baru</button>
+	<button type="button" class="btn btn-outline-dark" (click)="modal.modal_3.closeModal()">Close</button>
 </ng-template>
